--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,4 +120,15 @@
   body {
     @apply bg-background text-foreground;
   }
+  h1 { 
+    font-size: 1.4rem; 
+  }
+
+  h2 { 
+    font-size: 1.2rem; 
+  }
+
+  h3 { 
+    font-size: 1.1rem; 
+  }
 }
